# fontMath

./: .coveragerc  .gitignore  .swp  .travis.yml  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: run-tests.yml
.travis/: install.sh
Lib/fontMath/: __init__.py  mathDict.py  mathFunctions.py  mathGlyph.py  mathGuideline.py  mathInfo.py  mathKerning.py  mathTransform.py  strict_sketch_mathGlyph.py
Lib/fontMath/test/: test_mathDict.py  test_mathFunctions.py  test_mathGlyph.py  test_mathGuideline.py  test_mathInfo.py  test_mathKerning.py  test_mathTransform.py
