[bumpversion]
current_version = 0.4.1
commit = True

[bumpversion:file:Lib/fontMath/__init__.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[wheel]
universal = 1

[sdist]
formats = zip

[aliases]
test = pytest

[metadata]
license_file = License.txt

[tool:pytest]
minversion = 2.8
testpaths = 
	Lib/fontMath
python_files = 
	test_*.py
python_classes = 
	*Test
addopts = 
	-v
	-r a
	--doctest-modules
	--doctest-ignore-import-errors
