[wheel]
universal = 1

[sdist]
formats = zip

[aliases]
dist = build_sphinx sdist bdist_wheel
test = pytest

[metadata]
license_file = License.txt

[tool:pytest]
minversion = 2.8
testpaths = 
	Lib/fontMath
python_files = 
	test_*.py
python_classes = 
	*Test
addopts = 
	-v
	-r a
	--doctest-modules
	--doctest-ignore-import-errors

[options]
setup_requires = setuptools_scm